kubernetes-manifests/base/counter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  labels:
    app: counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: counter
          image: drosenbauer/docker-counter
          ports:
            - containerPort: 80
