kubernetes-manifests/base/db-mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        - name: MSSQL_SA_PASSWORD
          value: id3ntityIQ!-TQ8BaiOxKAL4v-4lCIxVx
        - name: MSSQL_PID
          value: Developer
        image: mcr.microsoft.com/mssql/server:2019-latest
        imagePullPolicy: IfNotPresent
        name: db
        ports:
        - containerPort: 1433
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 0
        volumeMounts:
        - mountPath: /var/opt/mssql
          name: mssql-data
      securityContext:
        fsGroup: 10001
      volumes:
      - name: mssql-data
        persistentVolumeClaim:
          claimName: mssql-nas-pvc
