kubernetes-manifests/base/iiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iiq
  labels:
    app: iiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iiq
  template:
    metadata:
      labels:
        app: iiq
    spec:
      containers:
        - name: iiq
          image: 192.168.0.236:5000/sailpoint-docker:latest
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /identityiq
              port: 8080
            failureThreshold: 300
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /identityiq
              port: 8080
            initialDelaySeconds: 3000
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /identityiq
              port: 8080
            initialDelaySeconds: 3000
            periodSeconds: 10
            failureThreshold: 3
