kubernetes-manifests/base/ldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap
  template:
    metadata:
      labels:
        app: ldap
    spec:
      enableServiceLinks: false
      containers:
        - name: ldap
          image: osixia/openldap:1.5.0
          ports:
            - containerPort: 389
