kubernetes-manifests/base/mail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail
  labels:
    app: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
        - name: mail
          image: axllent/mailpit
          ports:
            - containerPort: 1025
            - containerPort: 8025
          volumeMounts:
            - name: mailpit-data
              mountPath: /data
      volumes:
        - name: mailpit-data
          emptyDir: {}
