kubernetes-manifests/base/phpldapadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpldapadmin
  name: phpldapadmin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpldapadmin
  template:
    metadata:
      labels:
        app: phpldapadmin
    spec:
      restartPolicy: Always
      containers:
      - env:
        - name: PHPLDAPADMIN_HTTPS
          value: "true"
        - name: PHPLDAPADMIN_LDAP_HOSTS
          value: "ldap.example.com"
        image: osixia/phpldapadmin:latest
        name: phpldapadmin
        ports:
        - containerPort: 443
          name: https
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 443
      - image: alpine/socat
        name: socat-sidecar
        command: ["/bin/sh", "-c"]
        args:
        - "sleep 5; socat TCP-LISTEN:8080,fork,reuseaddr OPENSSL:localhost:443,verify=0"
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
