kubernetes-manifests/base/activemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq
  labels:
    app: activemq
spec:
  type: ClusterIP
  ports:
    - port: 8161
      targetPort: 8161
      protocol: TCP
  selector:
    app: activemq
