kubernetes-manifests/base/counter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter
  labels:
    app: counter
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: counter
