kubernetes-manifests/base/db-mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mssql
  labels:
    app: db-mssql
spec:
  type: ClusterIP
  ports:
    - port: 1433
      targetPort: 1433
      protocol: TCP
  selector:
    app: db-mssql
