kubernetes-manifests/base/db-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mysql
  labels:
    app: db-mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: db-mysql
