kubernetes-manifests/base/iiq-counter-dependency.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
      - name: counter
        image: busybox
        command: ["/bin/sh", "-c", "while true; do nc -l -p 12345 -e echo 'OK'; sleep 1; done"]
        ports:
        - containerPort: 12345
---
apiVersion: v1
kind: Service
metadata:
  name: counter
  namespace: default
spec:
  selector:
    app: counter
  ports:
  - port: 12345
    targetPort: 12345
