kubernetes-manifests/base/iiq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iiq
  labels:
    app: iiq
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: iiq
