kubernetes-manifests/base/mail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail
  labels:
    app: mail
spec:
  type: NodePort
  ports:
    - port: 1025
      targetPort: 1025
      protocol: TCP
      name: smtp
    - port: 8025
      targetPort: 8025
      protocol: TCP
      name: web
  selector:
    app: mail
