kubernetes-manifests/base/phpldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  namespace: default
  labels:
    app: phpldapadmin
spec:
  selector:
    app: phpldapadmin
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
