kubernetes-manifests/base/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh
  labels:
    app: ssh
spec:
  type: ClusterIP
  ports:
    - port: 22
      targetPort: 22
  selector:
    app: ssh
