kubernetes-manifests/base/iiq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iiq-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: identityiq.example.com
    http:
      paths:
      - path: /identityiq
        pathType: Prefix
        backend:
          service:
            name: iiq
            port:
              number: 8080
